@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 Mapnik Trunk
 ------------
 
+- Added xinclude (http://www.w3.org/TR/xinclude/) support to libxml2-based xml parser (oldtopos) (#567)
+
 - Optimized rendering speeds by avoiding locking in the projection code (r2063)
 
 - Added support for setting global alignment of polygon pattern fills (#203)
